--- a/model-neo4j/pom.xml
+++ b/model-neo4j/pom.xml
@@ -63,6 +63,11 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
+        <dependency>
+        <groupId>org.scala-lang</groupId>
+        <artifactId>scala-library</artifactId>
+        <version>2.8.1</version>
+      </dependency>
          <dependency>
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest</artifactId>
