--- a/model-neo4j/pom.xml
+++ b/model-neo4j/pom.xml
@@ -12,7 +12,7 @@
 	</parent>
 
 	<properties>
-		<neo4j.version>1.3.M03</neo4j.version>
+		<neo4j.version>1.3-SNAPSHOT</neo4j.version>
 	</properties>
 
 	<build>
