--- a/tools-neo4j/pom.xml
+++ b/tools-neo4j/pom.xml
@@ -10,8 +10,9 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
+
 	<properties>
-		<neo4j.version>1.3.M03</neo4j.version>
+		<neo4j.version>1.3-SNAPSHOT</neo4j.version>
 	</properties>
 
 	<build>
