--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -33,4 +33,17 @@
         </plugins>
     </build>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.escapek.ekcmdb</groupId>
+            <artifactId>model</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+        <groupId>org.scala-lang</groupId>
+        <artifactId>scala-library</artifactId>
+        <version>2.8.1</version>
+      </dependency>
+    </dependencies>
+
 </project>
