--- a/model-neo4j/pom.xml
+++ b/model-neo4j/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.escapek.ekcmdb</groupId>
-	<artifactId>model.neo4j</artifactId>
+	<artifactId>model-neo4j</artifactId>
 	<name>Neo4J model implementation</name>
 	<version>0.0.1-SNAPSHOT</version>
 	<parent>
