--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
+        <repository>
+            <id>maven2-repository.dev.java.net</id>
+            <name>Java.net Repository for Maven</name>
+            <url>http://download.java.net/maven/2/</url>
+            <layout>default</layout>
+        </repository>
 	</repositories>
 
 	<pluginRepositories>
@@ -67,5 +73,6 @@
 		<module>tools-neo4j</module>
         <module>dao</module>
         <module>dao-neo4j</module>
+        <module>services</module>
     </modules>
 </project>
