--- a/services/pom.xml
+++ b/services/pom.xml
@@ -12,6 +12,7 @@
     <groupId>org.escapek.ekcmdb</groupId>
     <artifactId>services</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>bundle</packaging>
 
     <build>
         <sourceDirectory>src/main/scala</sourceDirectory>
@@ -20,14 +21,24 @@
             <plugin>
                 <groupId>org.scala-tools</groupId>
                 <artifactId>maven-scala-plugin</artifactId>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>compile</goal>
-                  <goal>testCompile</goal>
-                </goals>
-              </execution>
-            </executions>
+                <executions>
+                  <execution>
+                    <goals>
+                      <goal>compile</goal>
+                      <goal>testCompile</goal>
+                    </goals>
+                  </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <extensions>true</extensions>
+                <configuration>
+                  <instructions>
+                      <Bundle-SymbolicName>${pom.artifactId}</Bundle-SymbolicName>
+                  </instructions>
+                </configuration>
             </plugin>
         </plugins>
     </build>
