--- a/model/pom.xml
+++ b/model/pom.xml
@@ -10,6 +10,13 @@
 	<artifactId>model</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Abstract model</name>
+    <packaging>bundle</packaging>
+
+    <properties>
+        <bundle.symbolicName>org.escapek.ekcmdb.model</bundle.symbolicName>
+        <bundle.namespace>org.escapek.ekcmdb.model</bundle.namespace>
+    </properties>
+
 	<build>
 		<sourceDirectory>src/main/scala</sourceDirectory>
 		<testSourceDirectory>src/test/scala</testSourceDirectory>
@@ -26,6 +33,32 @@
               </execution>
             </executions>
             </plugin>
+            <plugin>
+              <groupId>org.ops4j</groupId>
+              <artifactId>maven-pax-plugin</artifactId>
+              <version>1.4</version>
+              <extensions>true</extensions>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.felix</groupId>
+              <artifactId>maven-bundle-plugin</artifactId>
+              <configuration>
+                <instructions>
+                  <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
+                  <Bundle-Version>${pom.version}</Bundle-Version>
+                  <Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${pom.version}"</Export-Package>
+                  <Private-Package>${bundle.namespace}.internal.*</Private-Package>
+                </instructions>
+              </configuration>
+            </plugin>
         </plugins>
 	</build>
+
+    <dependencies>
+        <dependency>
+        <groupId>com.weiglewilczek.scala-lang-osgi</groupId>
+        <artifactId>scala-library</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
