--- a/services-common/pom.xml
+++ b/services-common/pom.xml
@@ -10,9 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.escapek.ekcmdb</groupId>
-    <artifactId>services</artifactId>
+    <artifactId>services-common</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>bundle</packaging>
+
+    <properties>
+        <jersey.version>1.5</jersey.version>
+    </properties>
 
     <build>
         <sourceDirectory>src/main/scala</sourceDirectory>
@@ -31,14 +35,20 @@
                 </executions>
             </plugin>
             <plugin>
+              <groupId>org.ops4j</groupId>
+              <artifactId>maven-pax-plugin</artifactId>
+              <version>1.4</version>
+              <extensions>true</extensions>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
                 <extensions>true</extensions>
                 <configuration>
                   <instructions>
                       <Bundle-SymbolicName>${pom.artifactId}</Bundle-SymbolicName>
-                      <Export-Packages>org.escapek.ekcmdb.services</Export-Packages>
                       <Import-Package>*</Import-Package>
+                      <Export-Package>org.escapek.ekcmdb.services.common</Export-Package>
                   </instructions>
                 </configuration>
             </plugin>
@@ -47,10 +57,33 @@
 
     <dependencies>
         <dependency>
+             <groupId>org.osgi</groupId>
+             <artifactId>org.osgi.core</artifactId>
+             <version>4.2.0</version>
+             <scope>provided</scope>
+         </dependency>
+        <dependency>
+             <groupId>org.osgi</groupId>
+             <artifactId>org.osgi.compendium</artifactId>
+             <version>4.2.0</version>
+             <scope>provided</scope>
+         </dependency>
+        <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-server</artifactId>
-            <version>1.5</version>
+            <version>${jersey.version}</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-core</artifactId>
+            <version>${jersey.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
         </dependency>
     </dependencies>
 
