--- a/services-common/pom.xml
+++ b/services-common/pom.xml
@@ -13,6 +13,8 @@
     <artifactId>services-common</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>bundle</packaging>
+    <name>EKcmdb - REST services tool</name>
+
 
     <properties>
         <jersey.version>1.5</jersey.version>
@@ -43,12 +45,14 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
+                <version>2.3.4</version>
                 <extensions>true</extensions>
                 <configuration>
                   <instructions>
                       <Bundle-SymbolicName>${pom.artifactId}</Bundle-SymbolicName>
                       <Import-Package>*</Import-Package>
                       <Export-Package>org.escapek.ekcmdb.services.common</Export-Package>
+                      <Embed-Dependency>servlet-api;inline=true</Embed-Dependency>
                   </instructions>
                 </configuration>
             </plugin>
