--- a/dao-neo4j/pom.xml
+++ b/dao-neo4j/pom.xml
@@ -7,10 +7,11 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>dao-neo4j</artifactId>
-    <name>DAO impl</name>
+    <name>EKcmdb - DAO implementation</name>
 
 	<properties>
 		<neo4j.version>1.3-SNAPSHOT</neo4j.version>
+        <bundle.namespace>org.escapek.ekcmdb.dao.impl</bundle.namespace>
 	</properties>
 
 	<build>
@@ -38,6 +39,24 @@
                         <include>**/*Spec.class</include>
                     </includes>
                 </configuration>
+            </plugin>
+            <plugin>
+              <groupId>org.ops4j</groupId>
+              <artifactId>maven-pax-plugin</artifactId>
+              <version>1.4</version>
+              <extensions>true</extensions>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.felix</groupId>
+              <artifactId>maven-bundle-plugin</artifactId>
+              <configuration>
+                <instructions>
+                  <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
+                  <Bundle-Version>${pom.version}</Bundle-Version>
+                  <Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${pom.version}"</Export-Package>
+                  <Private-Package>${bundle.namespace}.internal.*</Private-Package>
+                </instructions>
+              </configuration>
             </plugin>
         </plugins>
 	</build>
