--- a/model-neo4j/pom.xml
+++ b/model-neo4j/pom.xml
@@ -3,16 +3,18 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.escapek.ekcmdb</groupId>
 	<artifactId>model-neo4j</artifactId>
-	<name>Neo4J model implementation</name>
+	<name>EKcmdb - Neo4J model implementation</name>
 	<version>0.0.1-SNAPSHOT</version>
 	<parent>
 		<artifactId>ekcmdb</artifactId>
 		<groupId>org.escapek</groupId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
+    <packaging>bundle</packaging>
 
 	<properties>
 		<neo4j.version>1.3-SNAPSHOT</neo4j.version>
+        <bundle.namespace>org.escapek.ekcmdb.model.neo4j</bundle.namespace>
 	</properties>
 
 	<build>
@@ -40,6 +42,24 @@
                         <include>**/*Spec.class</include>
                     </includes>
                 </configuration>
+            </plugin>
+            <plugin>
+              <groupId>org.ops4j</groupId>
+              <artifactId>maven-pax-plugin</artifactId>
+              <version>1.4</version>
+              <extensions>true</extensions>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.felix</groupId>
+              <artifactId>maven-bundle-plugin</artifactId>
+              <configuration>
+                <instructions>
+                  <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
+                  <Bundle-Version>${pom.version}</Bundle-Version>
+                  <Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${pom.version}"</Export-Package>
+                  <Private-Package>${bundle.namespace}.internal.*</Private-Package>
+                </instructions>
+              </configuration>
             </plugin>
         </plugins>
 	</build>
