--- a/tools-neo4j/pom.xml
+++ b/tools-neo4j/pom.xml
@@ -1,18 +1,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.escapek.ekcmdb</groupId>
-  <artifactId>tools-neo4j</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>Neo4J Tools</name>
-	<parent>
-		<artifactId>ekcmdb</artifactId>
-		<groupId>org.escapek</groupId>
-		<version>0.0.1-SNAPSHOT</version>
-	</parent>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>org.escapek.ekcmdb</groupId>
+    <artifactId>tools-neo4j</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>EKcmdb - Neo4J Tools</name>
+    <parent>
+        <artifactId>ekcmdb</artifactId>
+        <groupId>org.escapek</groupId>
+        <version>0.0.1-SNAPSHOT</version>
+    </parent>
+    <packaging>bundle</packaging>
 
 
 	<properties>
 		<neo4j.version>1.3-SNAPSHOT</neo4j.version>
+        <bundle.namespace>org.escapek.ekcmdb.tools.neo4j</bundle.namespace>
 	</properties>
 
 	<build>
@@ -30,6 +32,24 @@
                 </goals>
               </execution>
             </executions>
+            </plugin>
+            <plugin>
+              <groupId>org.ops4j</groupId>
+              <artifactId>maven-pax-plugin</artifactId>
+              <version>1.4</version>
+              <extensions>true</extensions>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.felix</groupId>
+              <artifactId>maven-bundle-plugin</artifactId>
+              <configuration>
+                <instructions>
+                  <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
+                  <Bundle-Version>${pom.version}</Bundle-Version>
+                  <Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${pom.version}"</Export-Package>
+                  <Private-Package>${bundle.namespace}.internal.*</Private-Package>
+                </instructions>
+              </configuration>
             </plugin>
         </plugins>
 	</build>
