--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,43 @@
       <url>http://download.java.net/maven/2/</url>
       <layout>default</layout>
     </repository>
+    <repository>
+      <id>spring-osgified-artifacts</id>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+      <name>Springframework Maven OSGified Artifacts Repository</name>
+      <url>http://maven.springframework.org/osgi</url>
+    </repository>
+    <repository>
+      <id>spring-maven-snapshot</id>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+      <name>Springframework Maven SNAPSHOT Repository</name>
+      <url>http://maven.springframework.org/snapshot</url>
+    </repository>
+    <repository>
+      <id>com.springsource.repository.bundles.external</id>
+      <url>http://repository.springsource.com/maven/bundles/external</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>springsource-repository-release</id>
+      <url>http://repository.springsource.com/maven/bundles/release</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>maven.springframework.osgi</id>
+      <url>http://http://maven.springframework.org/osgi</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
   </repositories>
 
   <pluginRepositories>
@@ -57,22 +94,36 @@
         </plugin>
       </plugins>
     </pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.ops4j</groupId>
+          <artifactId>maven-pax-plugin</artifactId>
+          <version>1.4</version>
+          <configuration>
+            <provision>
+              <param>--platform=felix</param>
+            </provision>
+          </configuration>
+          <executions>
+          </executions>
+        </plugin>
+      </plugins>
   </build>
 
   <dependencyManagement>
-        <dependencies>
-          <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.8.2</version>
-            <scope>test</scope>
-          </dependency>
-        <dependency>
-            <groupId>com.weiglewilczek.scala-lang-osgi</groupId>
-            <artifactId>scala-library</artifactId>
-            <version>2.8.1</version>
-            <scope>provided</scope>
-        </dependency>
+    <dependencies>
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.8.2</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.weiglewilczek.scala-lang-osgi</groupId>
+        <artifactId>scala-library</artifactId>
+        <version>2.8.1</version>
+        <scope>provided</scope>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -84,6 +135,7 @@
     <module>dao-neo4j</module>
     <module>services</module>
     <module>services-common</module>
+    <module>services-sample</module>
   </modules>
 
 </project>
