Move to eclipse attempt

--- a/pom.xml
+++ b/pom.xml
@@ -1,141 +1,102 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.escapek</groupId>
-  <artifactId>ekcmdb</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.escapek</groupId>
+	<artifactId>ekcmdb</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
 
-  <packaging>pom</packaging>
+	<packaging>pom</packaging>
 
-  <name>EscapeK CMDB</name>
+	<name>EscapeK CMDB</name>
 
-  <url>http://maven.apache.org</url>
+	<url>http://maven.apache.org</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <scala.version>2.8.1</scala.version>
-  </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<scala.version>2.8.1</scala.version>
+	</properties>
 
-  <repositories>
-    <repository>
-      <id>scala-tools.org</id>
-      <name>Scala-tools Maven2 Repository</name>
-      <url>http://scala-tools.org/repo-releases</url>
-    </repository>
-    <repository>
-      <id>neo.org</id>
-      <name>Neo4J Maven2 Repository</name>
-      <url>http://m2.neo4j.org/</url>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-    <repository>
-      <id>maven2-repository.dev.java.net</id>
-      <name>Java.net Repository for Maven</name>
-      <url>http://download.java.net/maven/2/</url>
-      <layout>default</layout>
-    </repository>
-    <repository>
-      <id>spring-osgified-artifacts</id>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-      <name>Springframework Maven OSGified Artifacts Repository</name>
-      <url>http://maven.springframework.org/osgi</url>
-    </repository>
-    <repository>
-      <id>spring-maven-snapshot</id>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-      <name>Springframework Maven SNAPSHOT Repository</name>
-      <url>http://maven.springframework.org/snapshot</url>
-    </repository>
-    <repository>
-      <id>com.springsource.repository.bundles.external</id>
-      <url>http://repository.springsource.com/maven/bundles/external</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-    <repository>
-      <id>springsource-repository-release</id>
-      <url>http://repository.springsource.com/maven/bundles/release</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-    <repository>
-      <id>maven.springframework.osgi</id>
-      <url>http://http://maven.springframework.org/osgi</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
+	<repositories>
+		<repository>
+			<id>scala-tools.org</id>
+			<name>Scala-tools Maven2 Repository</name>
+			<url>http://scala-tools.org/repo-releases</url>
+		</repository>
+		<repository>
+			<id>neo.org</id>
+			<name>Neo4J Maven2 Repository</name>
+			<url>http://m2.neo4j.org/</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>maven2-repository.dev.java.net</id>
+			<name>Java.net Repository for Maven</name>
+			<url>http://download.java.net/maven/2/</url>
+			<layout>default</layout>
+		</repository>
+	</repositories>
 
-  <pluginRepositories>
-    <pluginRepository>
-      <id>scala-tools.org</id>
-      <name>Scala-tools Maven2 Repository</name>
-      <url>http://scala-tools.org/repo-releases</url>
-    </pluginRepository>
-  </pluginRepositories>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>scala-tools.org</id>
+			<name>Scala-tools Maven2 Repository</name>
+			<url>http://scala-tools.org/repo-releases</url>
+		</pluginRepository>
+	</pluginRepositories>
 
-  <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.scala-tools</groupId>
-          <artifactId>maven-scala-plugin</artifactId>
-          <version>2.15.2</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.ops4j</groupId>
-          <artifactId>maven-pax-plugin</artifactId>
-          <version>1.4</version>
-          <configuration>
-            <provision>
-              <param>--platform=felix</param>
-            </provision>
-          </configuration>
-          <executions>
-          </executions>
-        </plugin>
-      </plugins>
-  </build>
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.scala-tools</groupId>
+					<artifactId>maven-scala-plugin</artifactId>
+					<version>2.15.2</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.felix</groupId>
+					<artifactId>maven-bundle-plugin</artifactId>
+					<version>2.3.4</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>4.8.2</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>com.weiglewilczek.scala-lang-osgi</groupId>
-        <artifactId>scala-library</artifactId>
-        <version>2.8.1</version>
-        <scope>provided</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>4.8.2</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.weiglewilczek.scala-lang-osgi</groupId>
+				<artifactId>scala-library</artifactId>
+				<version>2.8.1</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.scala-lang</groupId>
+				<artifactId>scala-library</artifactId>
+				<version>2.8.1</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
-  <modules>
-    <module>model</module>
-    <module>model-neo4j</module>
-    <module>tools-neo4j</module>
-    <module>dao</module>
-    <module>dao-neo4j</module>
-    <module>services</module>
-    <module>services-common</module>
-    <module>services-sample</module>
-  </modules>
+	<modules>
+		<module>model</module>
+		<module>model-neo4j</module>
+		<module>tools-neo4j</module>
+		<module>dao</module>
+		<module>dao-neo4j</module>
+		<module>services</module>
+		<module>services-common</module>
+		<module>services-sample</module>
+	</modules>
 
 </project>
