--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -21,7 +21,7 @@
 
     <build>
         <sourceDirectory>src/main/scala</sourceDirectory>
-        <testSourceDirectory>src/test/scala</testSourceDirectory>
+        <!--  <testSourceDirectory>src/test/scala</testSourceDirectory> -->
         <plugins>
             <plugin>
                 <groupId>org.scala-tools</groupId>
@@ -36,20 +36,13 @@
             </executions>
             </plugin>
             <plugin>
-              <groupId>org.ops4j</groupId>
-              <artifactId>maven-pax-plugin</artifactId>
-              <version>1.4</version>
-              <extensions>true</extensions>
-            </plugin>
-            <plugin>
               <groupId>org.apache.felix</groupId>
               <artifactId>maven-bundle-plugin</artifactId>
+              <extensions>true</extensions>
               <configuration>
                 <instructions>
                   <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
                   <Bundle-Version>${pom.version}</Bundle-Version>
-                  <Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${pom.version}"</Export-Package>
-                  <Private-Package>${bundle.namespace}.internal.*</Private-Package>
                 </instructions>
               </configuration>
             </plugin>
