--- a/tools-neo4j/pom.xml
+++ b/tools-neo4j/pom.xml
@@ -34,20 +34,14 @@
             </executions>
             </plugin>
             <plugin>
-              <groupId>org.ops4j</groupId>
-              <artifactId>maven-pax-plugin</artifactId>
-              <version>1.4</version>
-              <extensions>true</extensions>
-            </plugin>
-            <plugin>
               <groupId>org.apache.felix</groupId>
               <artifactId>maven-bundle-plugin</artifactId>
+              <extensions>true</extensions>
               <configuration>
                 <instructions>
                   <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
-                  <Bundle-Version>${pom.version}</Bundle-Version>
+                  <Bundle-Version>${project.version}</Bundle-Version>
                   <Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${pom.version}"</Export-Package>
-                  <Private-Package>${bundle.namespace}.internal.*</Private-Package>
                 </instructions>
               </configuration>
             </plugin>
