--- a/model/.settings/org.eclipse.jdt.core.prefs
+++ b/model/.settings/org.eclipse.jdt.core.prefs
@@ -1,3 +1,9 @@
-#Mon Mar 14 16:25:41 CET 2011
+#Mon Mar 14 21:26:23 CET 2011
 eclipse.preferences.version=1
+org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
+org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
+org.eclipse.jdt.core.compiler.compliance=1.6
+org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
+org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
 org.eclipse.jdt.core.compiler.problem.forbiddenReference=warning
+org.eclipse.jdt.core.compiler.source=1.6
