--- a/dao-neo4j/pom.xml
+++ b/dao-neo4j/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
-        <artifactId>ekcmdb</artifactId>
         <groupId>org.escapek</groupId>
+        <artifactId>ekcmdb</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -59,7 +59,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.escapek.ekcmdb</groupId>
-			<artifactId>model</artifactId>
+			<artifactId>core</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
         <dependency>
