--- a/services/pom.xml
+++ b/services/pom.xml
@@ -68,6 +68,11 @@
 			<version>1.5</version>
 			<scope>provided</scope>
 		</dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+        </dependency>
 		<dependency>
 			<groupId>org.scala-lang</groupId>
 			<artifactId>scala-library</artifactId>
