--- a/core/pom.xml
+++ b/core/pom.xml
@@ -7,13 +7,13 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<groupId>org.escapek.ekcmdb</groupId>
+	<artifactId>core</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>EKcmdb - Abstract model</name>
-	<artifactId>core</artifactId>
 	<packaging>bundle</packaging>
 
     <properties>
-        <bundle.namespace>org.escapek.ekcmdb.model</bundle.namespace>
+        <bundle.namespace>org.escapek.ekcmdb.core</bundle.namespace>
     </properties>
 
 	<build>
