--- a/services/pom.xml
+++ b/services/pom.xml
@@ -41,42 +41,58 @@
 				<configuration>
 					<instructions>
 						<Bundle-SymbolicName>${pom.artifactId}</Bundle-SymbolicName>
-						<Export-Packages>org.escapek.ekcmdb.services</Export-Packages>
+						<Export-Packages>org.escapek.ekcmdb.services;com.eaio.*</Export-Packages>
 						<Import-Package>*</Import-Package>
+						<Bundle-Activator>org.escapek.ekcmdb.services.EKcmdbServicesActivator</Bundle-Activator>
 					</instructions>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.ops4j</groupId>
+				<artifactId>maven-pax-plugin</artifactId>
+				<version>1.4</version>
 			</plugin>
 		</plugins>
 	</build>
 
 	<dependencies>
-        <dependency>
-             <groupId>org.osgi</groupId>
-             <artifactId>org.osgi.core</artifactId>
-             <version>4.2.0</version>
-             <scope>provided</scope>
-         </dependency>
-        <dependency>
-             <groupId>org.osgi</groupId>
-             <artifactId>org.osgi.compendium</artifactId>
-             <version>4.2.0</version>
-             <scope>provided</scope>
-         </dependency>
+		<dependency>
+			<groupId>org.osgi</groupId>
+			<artifactId>org.osgi.core</artifactId>
+			<version>4.2.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.osgi</groupId>
+			<artifactId>org.osgi.compendium</artifactId>
+			<version>4.2.0</version>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-server</artifactId>
 			<version>1.5</version>
 			<scope>provided</scope>
 		</dependency>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
-        </dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+		</dependency>
 		<dependency>
 			<groupId>org.scala-lang</groupId>
 			<artifactId>scala-library</artifactId>
 			<version>2.8.1</version>
+		</dependency>
+		<dependency>
+			<groupId>se.scalablesolutions.akka</groupId>
+			<artifactId>akka-actor</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.eaio.uuid</groupId>
+			<artifactId>uuid</artifactId>
+			<version>3.2</version>
 		</dependency>
 	</dependencies>
 
