Create MANIFEST in META-INF for eclipse

--- a/services/pom.xml
+++ b/services/pom.xml
@@ -39,6 +39,7 @@
 				<artifactId>maven-bundle-plugin</artifactId>
 				<extensions>true</extensions>
 				<configuration>
+	              	<manifestLocation>META-INF</manifestLocation>
 					<instructions>
 						<Bundle-SymbolicName>${pom.artifactId}</Bundle-SymbolicName>
 						<Export-Packages>org.escapek.ekcmdb.services;com.eaio.*</Export-Packages>
