--- a/dao-neo4j/pom.xml
+++ b/dao-neo4j/pom.xml
@@ -9,6 +9,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>dao-neo4j</artifactId>
     <name>EKcmdb - DAO implementation</name>
+    <packaging>bundle</packaging>
 
 	<properties>
 		<neo4j.version>1.3-SNAPSHOT</neo4j.version>
@@ -46,6 +47,7 @@
               <artifactId>maven-bundle-plugin</artifactId>
               <extensions>true</extensions>
               <configuration>
+              	<manifestLocation>META-INF</manifestLocation>
                 <instructions>
                   <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
                   <Bundle-Version>${pom.version}</Bundle-Version>
