--- a/services-sample/pom.xml
+++ b/services-sample/pom.xml
@@ -43,6 +43,7 @@
 				<artifactId>maven-bundle-plugin</artifactId>
 				<extensions>true</extensions>
 				<configuration>
+	              	<manifestLocation>META-INF</manifestLocation>
 					<instructions>
 						<Bundle-SymbolicName>${pom.artifactId}</Bundle-SymbolicName>
 						<Export-Packages>org.escapek.ekcmdb.services</Export-Packages>
