--- a/core/pom.xml
+++ b/core/pom.xml
@@ -12,49 +12,52 @@
 	<name>EKcmdb - Abstract model</name>
 	<packaging>bundle</packaging>
 
-    <properties>
-        <bundle.namespace>org.escapek.ekcmdb.core</bundle.namespace>
-    </properties>
+	<properties>
+		<bundle.namespace>org.escapek.ekcmdb.core</bundle.namespace>
+	</properties>
 
 	<build>
 		<sourceDirectory>src/main/scala</sourceDirectory>
 		<testSourceDirectory>src/test/scala</testSourceDirectory>
-        <plugins>
-            <plugin>
-                <groupId>org.scala-tools</groupId>
-                <artifactId>maven-scala-plugin</artifactId>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>compile</goal>
-                  <goal>testCompile</goal>
-                </goals>
-              </execution>
-            </executions>
-            </plugin>
-            <plugin>
-              <groupId>org.apache.felix</groupId>
-              <artifactId>maven-bundle-plugin</artifactId>
-              <extensions>true</extensions>
-              <configuration>
-              	<manifestLocation>META-INF</manifestLocation>
-                <instructions>
-                  <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
-                  <Bundle-Version>${project.version}</Bundle-Version>
-                  <Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${pom.version}"</Export-Package>
-                  <Private-Package>${bundle.namespace}.internal.*</Private-Package>
-                </instructions>
-              </configuration>
-            </plugin>
-        </plugins>
+		<plugins>
+			<plugin>
+				<groupId>org.scala-tools</groupId>
+				<artifactId>maven-scala-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>compile</goal>
+							<goal>testCompile</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<extensions>true</extensions>
+				<configuration>
+					<manifestLocation>META-INF</manifestLocation>
+					<instructions>
+						<Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
+						<Bundle-Version>${project.version}</Bundle-Version>
+						<Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${pom.version}"</Export-Package>
+						<Private-Package>${bundle.namespace}.internal.*</Private-Package>
+					</instructions>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 
-    <dependencies>
-        <dependency>
-        <groupId>org.escapek.ekcmdb</groupId>
-        <artifactId>osgi-dependencies</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>org.escapek.ekcmdb</groupId>
+			<artifactId>osgi-dependencies</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
+	</dependencies>
 
 </project>
