Neo4j datasource configuration plugin

--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,7 @@
 		<module>services-sample</module>
 		<module>osgi-dependencies</module>
 		<module>features</module>
+		<module>configuration-datasource-neo4j</module>
 	</modules>
 
 </project>
