--- a/services/pom.xml
+++ b/services/pom.xml
@@ -16,6 +16,10 @@
 
 	<packaging>bundle</packaging>
 
+	<properties>
+		<bundle.namespace>org.escapek.ekcmdb.services</bundle.namespace>
+	</properties>
+
 	<name>EKcmdb - Model REST services</name>
 
 	<build>
@@ -37,16 +41,6 @@
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-				<extensions>true</extensions>
-				<configuration>
-	              	<manifestLocation>META-INF</manifestLocation>
-					<instructions>
-						<Bundle-SymbolicName>${pom.artifactId}</Bundle-SymbolicName>
-						<Export-Packages>org.escapek.ekcmdb.services.*</Export-Packages>
-						<Import-Package>*</Import-Package>
-						<Bundle-Activator>org.escapek.ekcmdb.services.EKcmdbServicesActivator</Bundle-Activator>
-					</instructions>
-				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.ops4j</groupId>
