--- a/core/pom.xml
+++ b/core/pom.xml
@@ -9,8 +9,12 @@
 	<groupId>org.escapek.ekcmdb</groupId>
 	<artifactId>core</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>EKcmdb - Abstract model</name>
+	<name>EKcmdb - ${project.groupId}.${project.artifactId}</name>
 	<packaging>bundle</packaging>
+
+	<properties>
+		<bundle.namespace>org.escapek.ekcmdb.core</bundle.namespace>
+	</properties>
 
 	<build>
 		<finalName>${project.groupId}.${project.artifactId}_${project.version}</finalName>
@@ -32,23 +36,14 @@
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-				<extensions>true</extensions>
-				<configuration>
-					<manifestLocation>META-INF</manifestLocation>
-					<instructions>
-						<Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
-						<Bundle-Version>${project.version}</Bundle-Version>
-						<Export-Package>org.escapek.ekcmdb.core.*;version="${project.version}"</Export-Package>
-					</instructions>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
 
 	<dependencies>
 		<dependency>
-			<groupId>org.escapek.ekcmdb</groupId>
-			<artifactId>osgi-dependencies</artifactId>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
