--- a/services-common/pom.xml
+++ b/services-common/pom.xml
@@ -14,9 +14,9 @@
 	<packaging>bundle</packaging>
 	<name>EKcmdb - REST services tool</name>
 
-
 	<properties>
 		<jersey.version>1.5</jersey.version>
+		<bundle.namespace>org.escapek.ekcmdb.services.common</bundle.namespace>
 	</properties>
 
 	<build>
@@ -38,17 +38,6 @@
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-				<version>2.3.4</version>
-				<extensions>true</extensions>
-				<configuration>
-					<manifestLocation>META-INF</manifestLocation>
-					<instructions>
-						<Bundle-SymbolicName>${pom.artifactId}</Bundle-SymbolicName>
-						<Import-Package>*</Import-Package>
-						<Export-Package>org.escapek.ekcmdb.services.common</Export-Package>
-						<Embed-Dependency>servlet-api;inline=true</Embed-Dependency>
-					</instructions>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
